fix layout width (avoid horizontal scroll) for youtube embeds on mobile (#242)

--- a/frontend/src/Components/ContentComponent.module.scss
+++ b/frontend/src/Components/ContentComponent.module.scss
@@ -17,7 +17,7 @@
     color: var(--fg);
   }
 
-  img {
+  img, :global(a.youtube-embed) img{
     max-width: 100%;
     max-height: 500px;
   }
